# tgg-connect-may2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  schemas.txt  tox.ini
notebooks/: join_tables_for_real.py  popularity_nb.py
src/tgg_movies/: get_movie_data.py  join_tables.py  popularity_analysis.py
tests/: conftest.py  test_join_tables.py  test_main.py  test_popularity_analysis.py
