[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgg-movies"
version = "0.1.0"
description = 'Update me...'
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "tox",
  "black",
  "coverage",
  "mypy",
  "pip-tools",
  "pre-commit",
  "pytest",
  "ruff",
  "hail",
  "loguru",
  "ipython",
  "seaborn",
  "pandas",
  "matplotlib",
]

[project.scripts]
tgg-movies = "tgg_movies.main:main"

[project.urls]
Documentation = "https://github.com/broadinstitute/tgg-movies#readme"
Issues = "https://github.com/broadinstitute/tgg-connect-may2024/issues"
Source = "https://github.com/broadinstitute/tgg-connect-may2024"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
preview = true

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.paths]
source = ["src", ".tox/*/lib/python*/site-packages"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
fail_under = 100
show_missing = true

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict = true
overrides = [{ module = [], ignore_missing_imports = true }]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
ignore = ["ANN101", "CPY001"] # annotations for self
src = ["src", "tests"]
preview = true

[tool.ruff.per-file-ignores]
"tests/*.py" = [
  "PLR2004", # magic value comparison
  "S101",    # use of assert detected
  "TCH002",  # third party import (for pytest)
]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.isort]
known-first-party = ["tgg_movies"]
